<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:onClick="searchDatabase"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_editText"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/hunter_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/hunter"
        app:layout_constraintStart_toEndOf="@+id/druid_checkbox"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/druid_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/druid"
        app:layout_constraintBaseline_toBaselineOf="@+id/hunter_checkbox"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/mage_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mage"
        app:layout_constraintBaseline_toBaselineOf="@+id/hunter_checkbox"
        app:layout_constraintStart_toEndOf="@+id/hunter_checkbox" />

    <CheckBox
        android:id="@+id/paladin_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paladin"
        app:layout_constraintBaseline_toBaselineOf="@+id/mage_checkbox"
        app:layout_constraintStart_toEndOf="@+id/mage_checkbox" />

    <CheckBox
        android:id="@+id/priest_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/priest"
        app:layout_constraintBottom_toTopOf="@+id/warrior_checkbox"
        app:layout_constraintStart_toEndOf="@+id/paladin_checkbox" />

    <CheckBox
        android:id="@+id/rogue_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rogue"
        app:layout_constraintBaseline_toBaselineOf="@+id/shaman_checkbox"
        app:layout_constraintStart_toStartOf="@+id/druid_checkbox" />

    <CheckBox
        android:id="@+id/shaman_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shaman"
        app:layout_constraintStart_toEndOf="@+id/rogue_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/hunter_checkbox" />

    <CheckBox
        android:id="@+id/warlock_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warlock"
        app:layout_constraintBaseline_toBaselineOf="@+id/shaman_checkbox"
        app:layout_constraintStart_toEndOf="@+id/shaman_checkbox" />

    <CheckBox
        android:id="@+id/warrior_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warrior"
        app:layout_constraintBaseline_toBaselineOf="@+id/warlock_checkbox"
        app:layout_constraintStart_toEndOf="@+id/warlock_checkbox" />

    <EditText
        android:id="@+id/search_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/all_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/cost_all"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/zero_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_0"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/one_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_1"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/two_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_2"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/three_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_3"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/four_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_4"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/five_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_5"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/six_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_6"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/seven_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost_7"
            android:textSize="10sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_class"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/filter_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rogue_checkbox" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />
</androidx.constraintlayout.widget.ConstraintLayout>
